[package]
name = "htils"
description = "utilities pack for pentest"
license = "GPL-3.0-only"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/Arikato111/htil"
readme = "README.md"

categories = []
include = ["src/*"]


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.48"
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["full"] }
tokio-test = "0.4.4"