[package]
name = "sked"
description = "utilities pack for pentest"
authors = ["Nawasan <nawasan.dev@gmail.com>"]
license = "GPL-3.0-only"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/ZocketZero/sked"
readme = "README.md"
categories = ["command-line-utilities"]

include = ["src/", "LICENSE"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.64"
colored = "3.0.0"
regex = "1.12.2"
reqwest = "0.13.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-test = "0.4.4"
